# taskmgr

./: .gitignore  README.md  install.sh  package-lock.json  task-mgr.service
server/: Cargo.toml
server/src/: main.rs
server/src/alerts/: mod.rs
server/src/api/: mod.rs
server/src/auth/: mod.rs
server/src/core/: models.rs
server/src/db/: init.rs
server/src/exec/: envs.rs  mod.rs
server/src/fs/: mod.rs
server/src/monitor/: mod.rs
web/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: FilePicker.tsx  ResourceChart.tsx
web/src/layouts/: DashboardLayout.tsx
web/src/lib/: api.ts
web/src/pages/: Dashboard.tsx  Files.tsx  Login.tsx  TaskDetail.tsx  TaskList.tsx  TaskNew.tsx
