[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
uuid = { version = "1.7", features = ["v4", "serde"] }
dashmap = "5.5"
portable-pty = "0.9.0"
anyhow = "1.0.100"
tokio-tungstenite = "0.28.0"
