[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
dashmap = "5.5"
portable-pty = "0.8"
anyhow = "1.0.100"
tokio-tungstenite = "0.28.0"
which = "6.0"
env_home = "0.1"
# Phase 2 Dependencies
pam = "0.7"
jsonwebtoken = "9.2"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
users = "0.11.0"
